# verihogg-lint

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: docker-publish.yml
linter/include/: type_casting.h
linter/include/main/: rule_dispatcher.h
linter/include/rules/: all_rules.h  assertion_statement_atribute_instance.h  assignment_pattern.h  assignment_pattern_context.h  class_variable_lifetime.h  concatenation_multiplier.h  covergroup_expression.h  coverpoint_expression_type.h  dpi_decl_string.h  empty_assignment_pattern.h  exponent_format_time_value.h  fatal_rule.h  foreach_loop_condition.h  hierarchical_interface_identifier.h  implicit_data_type.h  inside_operator.h  inside_operator_range.h  missing_for_loop_condition.h  missing_for_loop_initialization.h  missing_for_loop_step.h  multiple_bins.h  multiple_dot_star_connection.h  parameter_dynamic_array.h  parameter_override.h  prototype_return_data_type.h  repeat_in_sequence.h  scalar_assignment_pattern.h  select_in_event_control.h  select_in_weight.h  system_function_arguments.h  target_unpacked_array_concatenation.h  time_value.h  type_casting.h  wildcard_operator.h
linter/include/utils/: ast_utils.h  location_utils.h  name_utils.h  string_utils.h
linter/src/: implicit_data_type.cpp  rule_dispatcher.cpp  select_in_event_control.cpp  type_casting.cpp
linter/src/main/: lint.cpp  rule_dispatcher.cpp
linter/src/rules/: assertion_statement_atribute_instance.cpp  assignment_pattern.cpp  assignment_pattern_context.cpp  class_variable_lifetime.cpp  concatenation_multiplier.cpp  coverpoint_expression_type.cpp  dpi_decl_string.cpp  empty_assignment_pattern.cpp  exponent_format_time_value.cpp  expression_covergroup.cpp  fatal_rule.cpp  foreach_loop_condition.cpp  hierarchical_interface_identifier.cpp  implicit_data_type.cpp  inside_operator.cpp  inside_operator_range.cpp  missing_for_loop_condition.cpp  missing_for_loop_initialization.cpp  missing_for_loop_step.cpp  multiple_bins.cpp  multiple_dot_star_connection.cpp  parameter_dynamic_array.cpp  parametr_override.cpp  prototype_return_data_type.cpp  repeat_in_sequence.cpp  scalar_assignment_pattern.cpp  select_in_event_control.cpp  select_in_weight.cpp  system_function_arguments.cpp  target_array_unpacked_concatenation.cpp  time_value.cpp  type_casting.cpp  wildcard_operator.cpp
linter/src/utils/: ast_utils.cpp  location_utils.cpp  name_utils.cpp  string_utils.cpp
